# glow-squid

./: .gitignore  README.md  docker-compose.yml
wind_farm_service/: Dockerfile  README.md  pyproject.toml
wind_farm_service/src/: manage.py
wind_farm_service/src/projects/: admin.py  models.py  serializers.py  urls.py  views.py
wind_farm_service/src/projects/management/commands/: import_projects.py  import_wtgs.py
wind_farm_service/src/projects/migrations/: 0001_initial.py
wind_farm_service/src/wind_farm_service/: asgi.py  settings.py  urls.py  wsgi.py
wind_farm_webapp/: Dockerfile  package.json
wind_farm_webapp/deployment/: nginx.default.conf
wind_farm_webapp/src/: App.js
wind_farm_webapp/src/api/: client.js  index.js  projects.js
wind_farm_webapp/src/components/: ProjectsTable.js
wind_farm_webapp/src/pages/: Home.js  Projects.js
