[tool.poetry]
name = "wind-farm-service"
version = "0.1.0"
description = ""
authors = ["Joeffison Silvério de Andrade <joeffison@gmail.com>"]
readme = "README.md"
packages = [{include = "wind_farm_service", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11.2"
django = "^4.1.7"
psycopg2-binary = "^2.9.5"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-watch = "^4.2.0"
pytest-dotenv = "^0.5.2"
python-dotenv = {version = "^1.0.0", extras = ["cli"]}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
